<resources>
    <string name="app_name">HabitWith</string>
    <string name="habit">HabitWith</string>
    <string name="comenzar">¡Comienza tu cambio!</string>
    <string name="login">Login</string>
    <string name="reg">Registrarse</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_user">Correo</string>
    <string name="login_pass">Contraseña</string>
    <string name="login_pass_confirm">Confirmar contraseña</string>
    <string name="hacer_login">Inicia sesión en tu </string>
    <string name="cuenta">CUENTA</string>
    <string name="crear">Crea una nueva</string>
    <string name="primer_objetivo">Máximiza la perdida de grasa conservando tu grasa muscular</string>
    <string name="objetivo">¿Cuál es tu objetivo principal?</string>
    <string name="segundo_objetivo">Manten tu físico y peso manteniendote saludable</string>
    <string name="tercero_objetivo">Incrementa tu masa muscular y vuélvete mas fuerte</string>
    <string name="datos">Datos personales</string>
    <string name="edad">Introduzca su edad en años</string>
    <string name="altura">Introduzca su altura en cm</string>
    <string name="peso">"Introduzca su peso en KG</string>
    <string name="error_email">El email introducido no es válido</string>
    <string name="error_pass">Las contraseñas introducidas no coinciden</string>
    <string name="error_pass_regex">La contraseña necesita tener, minimo una mayuscula, minuscula, un digito y 8 carácteres.</string>
    <string name="usuario_registrado">Usuario registrado de forma correcta</string>
    <string name="error_mail_existe">El correo introducido ya está registrado</string>
    <string name="error_mail_desconocido">No se ha podido comprobar el correo</string>
    <string name="hombre">Masculino</string>
    <string name="mujer">Femenino</string>
    <string name="siguiente">Siguiente</string>
    <string name="ejercicio">Ejercicio</string>
    <string name="dieta">Dieta</string>
    <string name="desglose">Desglose alimentos</string>
    <string name="scan">Click para escanear codigo de barras</string>
    <string name="bienvenido">¡Bienvenido a HabitWith!\n</string>
    <string name="register_failed">No se ha podido realizar correctamente el registro</string>
    <string name="correo_no_existe">El correo electrónico no existe</string>
    <string name="contra_incorrecta">La contraseña introducida es incorrecta</string>
    <string name="error_desconocido">Error desconocido\n</string>
    <string name="bienvenido_de_vuelta">Bienvenido de vuelta</string>
    <string name="exercise_no_encontrado">El ejercicio que ha introducido no se ha encontrado\n</string>
    <string name="alergenos">Alérgenos</string>
    <string name="aditivos">Aditivos</string>
    <string name="sobre_la_app">Sobre la app</string>
    <string name="funciones">Como usar la app</string>
    <string name="perfil">Perfil</string>
    <string name="about">Proyecto desarollado para trabajo de fin de ciclo por Dionisio Hernández Romera</string>
    <string name="titulo_desglose">Obtenga los adivitos y alérgenos del producto que desee</string>
    <string name="howto">Una vez registrado podras elegir entre, escoger un ejercicio segun el músculo principal que quieras entrenar, una vez elegido elige el ejercicio que quieras prácticar y ver su descripción e imagen.\nTambién en cuanto a las recetas puedes elegir la que quieras de todo el listado y al seleccionar una, te llevará a la pagina donde podras ver toda la información referente a ella.\nPor último si eliges el desglose de alimentos podrás echarle una foto a un codigo de barras y podrás ver tanto sus aditivos como sus alérgenos, si haces click a alguno de los aditivos, podrás ver una clasificación del mismo</string>
    <string name="perfil_titulo">Cambiar datos de tu perfil</string>
    <string name="bajar_peso">Bajar peso</string>
    <string name="ganar_musculo">Ganar músculo</string>
    <string name="estable">Equilibrado</string>
    <string name="actualizar">Actualizar</string>
    <string name="actualizado">Datos actualizados de forma correcta</string>
    <string name="fallo_actualizado">Ha fallado la actualizacion de los datos</string>
    <string name="vacio">No deje ningun campo vacio ni nada sin registrar</string>
    <string name="error_registro">Error en el registro</string>
    <string name="correo_no_valido">Correo no valido</string>
    <string name="contra_no_coincide">Contraseñas no coinciden</string>
</resources>